@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2007-09-03  Jean Bréfort  <jean.brefort@normalesup.org>
+	* programs/crystal/Makefile.am: fix use of --disable-schemas-install
+	[#20943].
+
 2007-08-30  Jean Bréfort  <jean.brefort@normalesup.org>
 	libs/gcu/residue.cc: add an bool to check if symbol is
 	ambiguous (if an element has the same symbol).
